cmake_minimum_required(VERSION 3.27)
project(LearnCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(shared_ptr shared_ptr.cpp)
add_executable(thread_pool thread_pool.cpp)
add_executable(Polymorphism 多态.cpp)
add_executable(cpp_test cpp_test.cpp)
add_executable(std_ref std_ref.cpp)
add_executable(5-productorConsumer 5.productorConsumer.cpp)
add_executable(gongxian 共线问题.cpp)
